build: Automatically deploy tagged releases to PyPI
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,11 @@ python:
 install:
   - pip install -e .
 script: python -m unittest
+deploy:
+  provider: pypi
+  distributions: "sdist bdist_wheel"
+  skip_existing: true
+  user: $PYPI_USER
+  password: $PYPI_PASSWORD
+  on:
+    tags: true
