rpm: Omit author from RPM changelog messages
Signed-off-by: Michael Brown <mbrown@fensystems.co.uk>

--- a/.tito/tito.props
+++ b/.tito/tito.props
@@ -3,3 +3,4 @@ builder = tito.builder.Builder
 tagger = tito.tagger.VersionTagger
 tag_commit_message_format = build: Release version %(version)s
 tag_format = v{version}-{release}
+changelog_format = %s
